--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+                <img src="C:\Users\Vasquez\Downloads\logo2.png" alt="Coffeum">
+        </div>
         <nav>
-            <div class="logo">
-                <img src="img/kapi.png" alt="LAVA JAVA Café Logo">
-            </div>
             <ul>
-                <li><a href="#home">Home</a>
-                </li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
