--- a/index.html
+++ b/index.html
@@ -53,7 +53,36 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 LAVA JAVA Café. All rights reserved.</p>
-    </footer>
+        <div class="footer-content">
+          <div class="footer-section">
+            <h2>Quick Links</h2>
+            <ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="menu.html">Menu</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h2>Follow Us</h2>
+            <div class="social-icons">
+              <a href="#"><img src="C:\Users\Vasquez\Downloads\facebook-circle-logo-24.png" alt="Facebook"></a>
+              <a href="#"><img src="C:\Users\Vasquez\Downloads\twitter-logo-24.png" alt="Twitter"></a>
+              <a href="#"><img src="C:\Users\Vasquez\Downloads\instagram-logo-24.png" alt="Instagram"></a>
+            </div>
+          </div>
+          <div class="footer-section">
+            <h2>Subscribe to Our Newsletter</h2>
+            <p>Stay up-to-date with our latest news and promotions.</p>
+            <form class="newsletter-form" action="subscribe.php" method="post">
+              <input type="email" name="email" placeholder="Enter your email" required>
+              <button type="submit">Subscribe</button>
+            </form>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2023 Coffeum. All rights reserved.</p>
+        </div>
+      </footer>
 </body>
 </html>
