--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+                <img src="C:\Users\Vasquez\Downloads\logo2.png" alt="Coffeum">
+        </div>
         <nav>
-            <div class="logo">
-                <img src="img/kapi.png" alt="LAVA JAVA Café Logo">
-            </div>
             <ul>
-                <li><a href="#home">Home</a>
-                </li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -22,17 +21,31 @@
         </nav>
     </header>
     <section id="home" class="hero">
-        <div class="Logo1">
-            <img src="img/kapi2.png" alt="LAVA JAVA Café Logo">
-        </div>
-        <h1>Welcome to LAVA JAVA Café</h1>
-        <p>Sip, Relax, Repeat</p>
-        <a href="#menu" class="cta-button">Explore Menu</a>
+            <img src="C:\Users\Vasquez\Downloads\IGNANT’s Berlin City Guide - IGNANT.png" alt="Cafe Interior">
+            <div class="hero-content">
+                <h1>Welcome to Coffeum</h1>
+                <p>Where every sip is an adventure and every cup is a memory waiting to be brewed.</p>
+            </div>
     </section>
+    
+      <section class="featured-products">
+        <h2>Featured Products</h2>
+        <div class="product">
+          <img src="C:\Users\Vasquez\Downloads\Toasted Coconut Mocha.jpeg" alt="Toasted Coconut Mocha">
+          <h3>Toasted Coconut Mocha</h3>
+          <p>Rich and aromatic coffee blend that will delight your senses.</p>
+        </div>
+        <div class="product">
+          <img src="C:\Users\Vasquez\Downloads\Strawberry and Elderflower Fraisiers Recipe.jpeg" alt="Strawberry and Elderflower Fraisiers">
+          <h3>Strawberry and Elderflower Fraisiers</h3>
+          <p>A delightful dessert that combines the flavors of ripe strawberries and fragrant elderflower in a beautiful and elegant presentation.</p>
+        </div>
+      </section>
+   
 
     <section id="menu" class="menu">
         <h2>Our Menu</h2>
-        <!-- Add menu items here -->
+
     </section>
 
     <section id="about" class="about">
@@ -54,7 +67,36 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 LAVA JAVA Café. All rights reserved.</p>
-    </footer>
+        <div class="footer-content">
+          <div class="footer-section">
+            <h2>Quick Links</h2>
+            <ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="menu.html">Menu</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="footer-section">
+            <h2>Follow Us</h2>
+            <div class="social-icons">
+              <a href="#"><img src="C:\Users\Vasquez\Downloads\facebook-circle-logo-24.png" alt="Facebook"></a>
+              <a href="#"><img src="C:\Users\Vasquez\Downloads\twitter-logo-24.png" alt="Twitter"></a>
+              <a href="#"><img src="C:\Users\Vasquez\Downloads\instagram-logo-24.png" alt="Instagram"></a>
+            </div>
+          </div>
+          <div class="footer-section">
+            <h2>Subscribe to Our Newsletter</h2>
+            <p>Stay up-to-date with our latest news and promotions.</p>
+            <form class="newsletter-form" action="subscribe.php" method="post">
+              <input type="email" name="email" placeholder="Enter your email" required>
+              <button type="submit">Subscribe</button>
+            </form>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>&copy; 2023 Coffeum. All rights reserved.</p>
+        </div>
+      </footer>
 </body>
 </html>
