--- a/index.html
+++ b/index.html
@@ -41,11 +41,66 @@
           <p>A delightful dessert that combines the flavors of ripe strawberries and fragrant elderflower in a beautiful and elegant presentation.</p>
         </div>
       </section>
-   
 
-    <section id="menu" class="menu">
-        <h2>Our Menu</h2>
-
+      <section id="menu" class="menu">
+        <div class="menu-section">
+            <h2>Coffee Menu</h2>
+            <div class="menu-item">
+                <h3>Espresso</h3>
+                <p>A concentrated coffee brewed by forcing hot water through finely-ground coffee beans.</p>
+                <span class="price">$2.50</span>
+            </div>
+            <div class="menu-item">
+                <h3>Cappuccino</h3>
+                <p>A classic espresso-based drink with equal parts of espresso, steamed milk, and milk foam.</p>
+                <span class="price">$3.75</span>
+            </div>
+            <div class="menu-item">
+                <h3>Latte</h3>
+                <p>A creamy espresso drink made with espresso and steamed milk.</p>
+                <span class="price">$4.25</span>
+            </div>
+            <div class="menu-item">
+                <h3>Americano</h3>
+                <p>A strong coffee made by diluting espresso with hot water.</p>
+                <span class="price">$3.00</span>
+            </div>
+            <div class="menu-item">
+                <h3>Toasted Coconut Mocha</h3>
+                <p>Rich and aromatic coffee blend that will delight your senses.</p>
+                <span class="price">$6.80</span>
+            </div>
+        </div>
+        
+        <div class="menu-section">
+            <h2>Pastry Menu</h2>
+            <div class="menu-item">
+                <h3>Croissant</h3>
+                <p>A buttery, flaky pastry with layers that melt in your mouth.</p>
+                <span class="price">$2.00</span>
+            </div>
+            <div class="menu-item">
+                <h3>Blueberry Muffin</h3>
+                <p>A moist muffin bursting with fresh blueberries.</p>
+                <span class="price">$2.25</span>
+            </div>
+            <div class="menu-item">
+                <h3>Chocolate Croissant</h3>
+                <p>A flaky croissant filled with rich chocolate filling.</p>
+                <span class="price">$2.50</span>
+            </div>
+            <div class="menu-item">
+                <h3>Almond Danish</h3>
+                <p>A sweet pastry filled with almond paste and topped with sliced almonds.</p>
+                <span class="price">$2.75</span>
+            </div>
+            <div class="menu-item">
+                <h3>Strawberry and Elderflower Fraisiers</h3>
+                <p>A delightful dessert that combines the flavors of ripe strawberries and fragrant elderflower in a beautiful and elegant presentation.</p>
+                <span class="price">$4.20</span>
+            </div>
+        </div>
+    </section>
     </section>
 
     <section id="about" class="about">
